PRAGMA foreign_keys=OFF;
BEGIN TRANSACTION;
CREATE TABLE IF NOT EXISTS "capteurs" (
  "id_capteur" INTEGER NOT NULL ,
  "type" varchar(50) DEFAULT NULL,
  "localisation" varchar(50) DEFAULT NULL,
  "description" text DEFAULT NULL,
  PRIMARY KEY ("id_capteur")
);
INSERT INTO capteurs VALUES(1,'Température','Intérieur','Capteur de température utilisé pour mesurer la température de l''air dans la ruche.');
INSERT INTO capteurs VALUES(2,'Humidité','Intérieur','Capteur d''humidité utilisé pour mesurer l''humidité dans la ruche.');
INSERT INTO capteurs VALUES(3,'Pression','Extérieur','Capteur de pression atmosphérique utilisé pour surveiller la pression de l''air à lextérieur de la ruche.');
INSERT INTO capteurs VALUES(4,'Masse','Intérieur','Capteur de masse utilisé pour mesurer le poids du nid ou de la ruche, afin de suivre son évolution.');
INSERT INTO capteurs VALUES(5,'Caméra','Extérieur','Caméra pour capturer des images des abeilles et observer leur activité à l''extérieur de la ruche.');
CREATE TABLE IF NOT EXISTS "ruche"(
  "id_ruche" INTEGER PRIMARY KEY NOT NULL,
  "name" varchar(50) DEFAULT NULL,
  "adress"varchar(200) DEFAULT NULL
, batterie REAL DEFAULT 0);
INSERT INTO ruche VALUES(1,'esp32tbeam','v3/tp-lorawan-2024@ttn/devices/esp32tbeam/up',100.0);
INSERT INTO ruche VALUES(2,'portenta','v3/tp-lorawan-2024@ttn/devices/portenta/up',100.0);
CREATE TABLE IF NOT EXISTS "donnees" (
  "id_donnee" INTEGER PRIMARY KEY NOT NULL ,
  "id_capteur" INTEGER NOT NULL,
  "id_ruche" INTEGER NOT NULL,
  "valeur" float DEFAULT NULL,
  "date_mesure" TEXT DEFAULT NULL,
  FOREIGN KEY ("id_capteur") REFERENCES "capteurs" ("id_capteur"),
  FOREIGN KEY ("id_ruche") REFERENCES "ruche"("id_ruche")
);
INSERT INTO donnees VALUES(1,1,1,18.0,'2025-03-24 12:24:21');
INSERT INTO donnees VALUES(2,2,1,20.0,'2025-03-24 12:24:21');
INSERT INTO donnees VALUES(3,3,1,10.0,'2025-03-24 12:24:21');
INSERT INTO donnees VALUES(4,4,1,10.0,'2025-03-24 12:24:21');
INSERT INTO donnees VALUES(5,1,1,18.0,'2025-03-24 12:24:58');
INSERT INTO donnees VALUES(6,2,1,20.0,'2025-03-24 12:24:58');
INSERT INTO donnees VALUES(7,3,1,10.0,'2025-03-24 12:24:58');
INSERT INTO donnees VALUES(8,4,1,10.0,'2025-03-24 12:24:58');
INSERT INTO donnees VALUES(9,1,1,18.0,'2025-03-24 12:25:34');
INSERT INTO donnees VALUES(10,2,1,20.0,'2025-03-24 12:25:34');
INSERT INTO donnees VALUES(11,3,1,10.0,'2025-03-24 12:25:34');
INSERT INTO donnees VALUES(12,4,1,10.0,'2025-03-24 12:25:34');
INSERT INTO donnees VALUES(13,1,1,18.0,'2025-03-24 12:26:10');
INSERT INTO donnees VALUES(14,2,1,20.0,'2025-03-24 12:26:10');
INSERT INTO donnees VALUES(15,3,1,10.0,'2025-03-24 12:26:10');
INSERT INTO donnees VALUES(16,4,1,10.0,'2025-03-24 12:26:10');
INSERT INTO donnees VALUES(17,1,1,18.0,'2025-03-24 12:26:46');
INSERT INTO donnees VALUES(18,2,1,20.0,'2025-03-24 12:26:46');
INSERT INTO donnees VALUES(19,3,1,10.0,'2025-03-24 12:26:46');
INSERT INTO donnees VALUES(20,4,1,10.0,'2025-03-24 12:26:46');
INSERT INTO donnees VALUES(21,1,1,18.0,'2025-03-24 12:27:22');
INSERT INTO donnees VALUES(22,2,1,20.0,'2025-03-24 12:27:22');
INSERT INTO donnees VALUES(23,3,1,10.0,'2025-03-24 12:27:22');
INSERT INTO donnees VALUES(24,4,1,10.0,'2025-03-24 12:27:22');
INSERT INTO donnees VALUES(25,1,1,18.0,'2025-03-24 12:27:59');
INSERT INTO donnees VALUES(26,2,1,20.0,'2025-03-24 12:27:59');
INSERT INTO donnees VALUES(27,3,1,10.0,'2025-03-24 12:27:59');
INSERT INTO donnees VALUES(28,4,1,10.0,'2025-03-24 12:27:59');
INSERT INTO donnees VALUES(29,1,1,18.0,'2025-03-24 12:28:35');
INSERT INTO donnees VALUES(30,2,1,20.0,'2025-03-24 12:28:35');
INSERT INTO donnees VALUES(31,3,1,10.0,'2025-03-24 12:28:35');
INSERT INTO donnees VALUES(32,4,1,10.0,'2025-03-24 12:28:35');
INSERT INTO donnees VALUES(33,1,1,18.0,'2025-03-24 12:29:11');
INSERT INTO donnees VALUES(34,2,1,20.0,'2025-03-24 12:29:11');
INSERT INTO donnees VALUES(35,3,1,10.0,'2025-03-24 12:29:11');
INSERT INTO donnees VALUES(36,4,1,10.0,'2025-03-24 12:29:11');
INSERT INTO donnees VALUES(37,1,1,18.0,'2025-03-24 12:29:47');
INSERT INTO donnees VALUES(38,2,1,20.0,'2025-03-24 12:29:47');
INSERT INTO donnees VALUES(39,3,1,10.0,'2025-03-24 12:29:47');
INSERT INTO donnees VALUES(40,4,1,10.0,'2025-03-24 12:29:47');
INSERT INTO donnees VALUES(41,1,1,18.0,'2025-03-24 12:30:23');
INSERT INTO donnees VALUES(42,2,1,20.0,'2025-03-24 12:30:23');
INSERT INTO donnees VALUES(43,3,1,10.0,'2025-03-24 12:30:23');
INSERT INTO donnees VALUES(44,4,1,10.0,'2025-03-24 12:30:23');
INSERT INTO donnees VALUES(45,1,1,18.0,'2025-03-24 12:31:00');
INSERT INTO donnees VALUES(46,2,1,20.0,'2025-03-24 12:31:00');
INSERT INTO donnees VALUES(47,3,1,10.0,'2025-03-24 12:31:00');
INSERT INTO donnees VALUES(48,4,1,10.0,'2025-03-24 12:31:00');
INSERT INTO donnees VALUES(49,1,1,18.0,'2025-03-24 12:31:36');
INSERT INTO donnees VALUES(50,2,1,20.0,'2025-03-24 12:31:36');
INSERT INTO donnees VALUES(51,3,1,10.0,'2025-03-24 12:31:36');
INSERT INTO donnees VALUES(52,4,1,10.0,'2025-03-24 12:31:36');
INSERT INTO donnees VALUES(53,1,1,18.0,'2025-03-24 12:32:12');
INSERT INTO donnees VALUES(54,2,1,20.0,'2025-03-24 12:32:12');
INSERT INTO donnees VALUES(55,3,1,10.0,'2025-03-24 12:32:12');
INSERT INTO donnees VALUES(56,4,1,10.0,'2025-03-24 12:32:12');
INSERT INTO donnees VALUES(57,1,1,18.0,'2025-03-24 12:32:48');
INSERT INTO donnees VALUES(58,2,1,20.0,'2025-03-24 12:32:48');
INSERT INTO donnees VALUES(59,3,1,10.0,'2025-03-24 12:32:48');
INSERT INTO donnees VALUES(60,4,1,10.0,'2025-03-24 12:32:48');
INSERT INTO donnees VALUES(61,1,1,18.0,'2025-03-24 12:33:24');
INSERT INTO donnees VALUES(62,2,1,20.0,'2025-03-24 12:33:24');
INSERT INTO donnees VALUES(63,3,1,10.0,'2025-03-24 12:33:24');
INSERT INTO donnees VALUES(64,4,1,10.0,'2025-03-24 12:33:24');
INSERT INTO donnees VALUES(65,1,1,18.0,'2025-03-24 12:34:01');
INSERT INTO donnees VALUES(66,2,1,20.0,'2025-03-24 12:34:01');
INSERT INTO donnees VALUES(67,3,1,10.0,'2025-03-24 12:34:01');
INSERT INTO donnees VALUES(68,4,1,10.0,'2025-03-24 12:34:01');
INSERT INTO donnees VALUES(69,1,1,18.0,'2025-03-24 12:34:37');
INSERT INTO donnees VALUES(70,2,1,20.0,'2025-03-24 12:34:37');
INSERT INTO donnees VALUES(71,3,1,10.0,'2025-03-24 12:34:37');
INSERT INTO donnees VALUES(72,4,1,10.0,'2025-03-24 12:34:37');
INSERT INTO donnees VALUES(73,1,2,18.0,'2025-03-24 12:35:06');
INSERT INTO donnees VALUES(74,2,2,20.0,'2025-03-24 12:35:06');
INSERT INTO donnees VALUES(75,3,2,10.0,'2025-03-24 12:35:06');
INSERT INTO donnees VALUES(76,4,2,10.0,'2025-03-24 12:35:06');
INSERT INTO donnees VALUES(78,1,2,18.0,'2025-03-24 12:35:13');
INSERT INTO donnees VALUES(79,2,2,20.0,'2025-03-24 12:35:13');
INSERT INTO donnees VALUES(80,3,2,10.0,'2025-03-24 12:35:13');
INSERT INTO donnees VALUES(81,4,2,10.0,'2025-03-24 12:35:13');
INSERT INTO donnees VALUES(82,1,1,18.0,'2025-03-24 12:35:13');
INSERT INTO donnees VALUES(83,2,1,20.0,'2025-03-24 12:35:13');
INSERT INTO donnees VALUES(84,3,1,10.0,'2025-03-24 12:35:13');
INSERT INTO donnees VALUES(85,4,1,10.0,'2025-03-24 12:35:13');
INSERT INTO donnees VALUES(86,1,2,18.0,'2025-03-24 12:35:23');
INSERT INTO donnees VALUES(87,2,2,20.0,'2025-03-24 12:35:23');
INSERT INTO donnees VALUES(88,3,2,10.0,'2025-03-24 12:35:23');
INSERT INTO donnees VALUES(89,4,2,10.0,'2025-03-24 12:35:23');
INSERT INTO donnees VALUES(90,1,2,18.0,'2025-03-24 12:35:29');
INSERT INTO donnees VALUES(91,2,2,20.0,'2025-03-24 12:35:29');
INSERT INTO donnees VALUES(92,3,2,10.0,'2025-03-24 12:35:29');
INSERT INTO donnees VALUES(93,4,2,10.0,'2025-03-24 12:35:29');
INSERT INTO donnees VALUES(94,1,2,18.0,'2025-03-24 12:35:35');
INSERT INTO donnees VALUES(95,2,2,20.0,'2025-03-24 12:35:35');
INSERT INTO donnees VALUES(96,3,2,10.0,'2025-03-24 12:35:35');
INSERT INTO donnees VALUES(97,4,2,10.0,'2025-03-24 12:35:35');
INSERT INTO donnees VALUES(98,1,2,18.0,'2025-03-24 12:35:41');
INSERT INTO donnees VALUES(99,2,2,20.0,'2025-03-24 12:35:41');
INSERT INTO donnees VALUES(100,3,2,10.0,'2025-03-24 12:35:41');
INSERT INTO donnees VALUES(101,4,2,10.0,'2025-03-24 12:35:41');
INSERT INTO donnees VALUES(102,1,2,18.0,'2025-03-24 12:35:47');
INSERT INTO donnees VALUES(103,2,2,20.0,'2025-03-24 12:35:47');
INSERT INTO donnees VALUES(104,3,2,10.0,'2025-03-24 12:35:47');
INSERT INTO donnees VALUES(105,4,2,10.0,'2025-03-24 12:35:47');
INSERT INTO donnees VALUES(106,1,1,18.0,'2025-03-24 12:35:49');
INSERT INTO donnees VALUES(107,2,1,20.0,'2025-03-24 12:35:49');
INSERT INTO donnees VALUES(108,3,1,10.0,'2025-03-24 12:35:49');
INSERT INTO donnees VALUES(109,4,1,10.0,'2025-03-24 12:35:49');
INSERT INTO donnees VALUES(110,1,2,18.0,'2025-03-24 12:35:53');
INSERT INTO donnees VALUES(111,2,2,20.0,'2025-03-24 12:35:53');
INSERT INTO donnees VALUES(112,3,2,10.0,'2025-03-24 12:35:53');
INSERT INTO donnees VALUES(113,4,2,10.0,'2025-03-24 12:35:53');
INSERT INTO donnees VALUES(115,1,2,18.0,'2025-03-24 12:35:58');
INSERT INTO donnees VALUES(116,2,2,20.0,'2025-03-24 12:35:58');
INSERT INTO donnees VALUES(117,3,2,10.0,'2025-03-24 12:35:58');
INSERT INTO donnees VALUES(118,4,2,10.0,'2025-03-24 12:35:58');
INSERT INTO donnees VALUES(119,1,2,18.0,'2025-03-24 12:36:04');
INSERT INTO donnees VALUES(120,2,2,20.0,'2025-03-24 12:36:04');
INSERT INTO donnees VALUES(121,3,2,10.0,'2025-03-24 12:36:04');
INSERT INTO donnees VALUES(122,4,2,10.0,'2025-03-24 12:36:04');
INSERT INTO donnees VALUES(123,1,2,18.0,'2025-03-24 12:36:10');
INSERT INTO donnees VALUES(124,2,2,20.0,'2025-03-24 12:36:10');
INSERT INTO donnees VALUES(125,3,2,10.0,'2025-03-24 12:36:10');
INSERT INTO donnees VALUES(126,4,2,10.0,'2025-03-24 12:36:10');
INSERT INTO donnees VALUES(127,1,2,18.0,'2025-03-24 12:36:16');
INSERT INTO donnees VALUES(128,2,2,20.0,'2025-03-24 12:36:16');
INSERT INTO donnees VALUES(129,3,2,10.0,'2025-03-24 12:36:16');
INSERT INTO donnees VALUES(130,4,2,10.0,'2025-03-24 12:36:16');
INSERT INTO donnees VALUES(131,1,2,18.0,'2025-03-24 12:36:22');
INSERT INTO donnees VALUES(132,2,2,20.0,'2025-03-24 12:36:22');
INSERT INTO donnees VALUES(133,3,2,10.0,'2025-03-24 12:36:22');
INSERT INTO donnees VALUES(134,4,2,10.0,'2025-03-24 12:36:22');
INSERT INTO donnees VALUES(135,1,1,18.0,'2025-03-24 12:36:26');
INSERT INTO donnees VALUES(136,2,1,20.0,'2025-03-24 12:36:26');
INSERT INTO donnees VALUES(137,3,1,10.0,'2025-03-24 12:36:26');
INSERT INTO donnees VALUES(138,4,1,10.0,'2025-03-24 12:36:26');
INSERT INTO donnees VALUES(139,1,2,18.0,'2025-03-24 12:36:28');
INSERT INTO donnees VALUES(140,2,2,20.0,'2025-03-24 12:36:28');
INSERT INTO donnees VALUES(141,3,2,10.0,'2025-03-24 12:36:28');
INSERT INTO donnees VALUES(142,4,2,10.0,'2025-03-24 12:36:28');
INSERT INTO donnees VALUES(143,1,2,18.0,'2025-03-24 12:36:34');
INSERT INTO donnees VALUES(144,2,2,20.0,'2025-03-24 12:36:34');
INSERT INTO donnees VALUES(145,3,2,10.0,'2025-03-24 12:36:34');
INSERT INTO donnees VALUES(146,4,2,10.0,'2025-03-24 12:36:34');
INSERT INTO donnees VALUES(147,1,2,18.0,'2025-03-24 12:36:40');
INSERT INTO donnees VALUES(148,2,2,20.0,'2025-03-24 12:36:40');
INSERT INTO donnees VALUES(149,3,2,10.0,'2025-03-24 12:36:40');
INSERT INTO donnees VALUES(150,4,2,10.0,'2025-03-24 12:36:40');
INSERT INTO donnees VALUES(151,1,2,18.0,'2025-03-24 12:36:46');
INSERT INTO donnees VALUES(152,2,2,20.0,'2025-03-24 12:36:46');
INSERT INTO donnees VALUES(153,3,2,10.0,'2025-03-24 12:36:46');
INSERT INTO donnees VALUES(154,4,2,10.0,'2025-03-24 12:36:46');
INSERT INTO donnees VALUES(155,1,2,18.0,'2025-03-24 12:36:52');
INSERT INTO donnees VALUES(156,2,2,20.0,'2025-03-24 12:36:52');
INSERT INTO donnees VALUES(157,3,2,10.0,'2025-03-24 12:36:52');
INSERT INTO donnees VALUES(158,4,2,10.0,'2025-03-24 12:36:52');
INSERT INTO donnees VALUES(159,1,2,18.0,'2025-03-24 12:36:57');
INSERT INTO donnees VALUES(160,2,2,20.0,'2025-03-24 12:36:57');
INSERT INTO donnees VALUES(161,3,2,10.0,'2025-03-24 12:36:57');
INSERT INTO donnees VALUES(162,4,2,10.0,'2025-03-24 12:36:57');
INSERT INTO donnees VALUES(163,1,1,18.0,'2025-03-24 12:37:02');
INSERT INTO donnees VALUES(164,2,1,20.0,'2025-03-24 12:37:02');
INSERT INTO donnees VALUES(165,3,1,10.0,'2025-03-24 12:37:02');
INSERT INTO donnees VALUES(166,4,1,10.0,'2025-03-24 12:37:02');
INSERT INTO donnees VALUES(167,1,2,18.0,'2025-03-24 12:37:04');
INSERT INTO donnees VALUES(168,2,2,20.0,'2025-03-24 12:37:04');
INSERT INTO donnees VALUES(169,3,2,10.0,'2025-03-24 12:37:04');
INSERT INTO donnees VALUES(170,4,2,10.0,'2025-03-24 12:37:04');
INSERT INTO donnees VALUES(171,1,2,18.0,'2025-03-24 12:37:09');
INSERT INTO donnees VALUES(172,2,2,20.0,'2025-03-24 12:37:09');
INSERT INTO donnees VALUES(173,3,2,10.0,'2025-03-24 12:37:09');
INSERT INTO donnees VALUES(174,4,2,10.0,'2025-03-24 12:37:09');
INSERT INTO donnees VALUES(175,1,2,18.0,'2025-03-24 12:37:15');
INSERT INTO donnees VALUES(176,2,2,20.0,'2025-03-24 12:37:15');
INSERT INTO donnees VALUES(177,3,2,10.0,'2025-03-24 12:37:15');
INSERT INTO donnees VALUES(178,4,2,10.0,'2025-03-24 12:37:15');
INSERT INTO donnees VALUES(179,1,2,18.0,'2025-03-24 12:37:21');
INSERT INTO donnees VALUES(180,2,2,20.0,'2025-03-24 12:37:21');
INSERT INTO donnees VALUES(181,3,2,10.0,'2025-03-24 12:37:21');
INSERT INTO donnees VALUES(182,4,2,10.0,'2025-03-24 12:37:21');
INSERT INTO donnees VALUES(183,1,2,18.0,'2025-03-24 12:37:26');
INSERT INTO donnees VALUES(184,2,2,20.0,'2025-03-24 12:37:26');
INSERT INTO donnees VALUES(185,3,2,10.0,'2025-03-24 12:37:26');
INSERT INTO donnees VALUES(186,4,2,10.0,'2025-03-24 12:37:26');
INSERT INTO donnees VALUES(187,1,2,18.0,'2025-03-24 12:37:32');
INSERT INTO donnees VALUES(188,2,2,20.0,'2025-03-24 12:37:32');
INSERT INTO donnees VALUES(189,3,2,10.0,'2025-03-24 12:37:32');
INSERT INTO donnees VALUES(190,4,2,10.0,'2025-03-24 12:37:32');
INSERT INTO donnees VALUES(191,1,2,18.0,'2025-03-24 12:37:37');
INSERT INTO donnees VALUES(192,2,2,20.0,'2025-03-24 12:37:37');
INSERT INTO donnees VALUES(193,3,2,10.0,'2025-03-24 12:37:37');
INSERT INTO donnees VALUES(194,4,2,10.0,'2025-03-24 12:37:37');
INSERT INTO donnees VALUES(195,1,1,18.0,'2025-03-24 12:37:38');
INSERT INTO donnees VALUES(196,2,1,20.0,'2025-03-24 12:37:38');
INSERT INTO donnees VALUES(197,3,1,10.0,'2025-03-24 12:37:38');
INSERT INTO donnees VALUES(198,4,1,10.0,'2025-03-24 12:37:38');
INSERT INTO donnees VALUES(199,1,2,18.0,'2025-03-24 12:37:42');
INSERT INTO donnees VALUES(200,2,2,20.0,'2025-03-24 12:37:42');
INSERT INTO donnees VALUES(201,3,2,10.0,'2025-03-24 12:37:42');
INSERT INTO donnees VALUES(202,4,2,10.0,'2025-03-24 12:37:42');
INSERT INTO donnees VALUES(203,1,2,18.0,'2025-03-24 12:37:48');
INSERT INTO donnees VALUES(204,2,2,20.0,'2025-03-24 12:37:48');
INSERT INTO donnees VALUES(205,3,2,10.0,'2025-03-24 12:37:48');
INSERT INTO donnees VALUES(206,4,2,10.0,'2025-03-24 12:37:48');
INSERT INTO donnees VALUES(207,1,2,18.0,'2025-03-24 12:37:53');
INSERT INTO donnees VALUES(208,2,2,20.0,'2025-03-24 12:37:53');
INSERT INTO donnees VALUES(209,3,2,10.0,'2025-03-24 12:37:53');
INSERT INTO donnees VALUES(210,4,2,10.0,'2025-03-24 12:37:53');
INSERT INTO donnees VALUES(211,1,2,18.0,'2025-03-24 12:38:11');
INSERT INTO donnees VALUES(212,2,2,20.0,'2025-03-24 12:38:11');
INSERT INTO donnees VALUES(213,3,2,10.0,'2025-03-24 12:38:11');
INSERT INTO donnees VALUES(214,4,2,10.0,'2025-03-24 12:38:11');
INSERT INTO donnees VALUES(215,1,1,18.0,'2025-03-24 12:38:14');
INSERT INTO donnees VALUES(216,2,1,20.0,'2025-03-24 12:38:14');
INSERT INTO donnees VALUES(217,3,1,10.0,'2025-03-24 12:38:14');
INSERT INTO donnees VALUES(218,4,1,10.0,'2025-03-24 12:38:14');
INSERT INTO donnees VALUES(219,1,1,18.0,'2025-03-24 12:38:50');
INSERT INTO donnees VALUES(220,2,1,20.0,'2025-03-24 12:38:50');
INSERT INTO donnees VALUES(221,3,1,10.0,'2025-03-24 12:38:50');
INSERT INTO donnees VALUES(222,4,1,10.0,'2025-03-24 12:38:50');
INSERT INTO donnees VALUES(223,1,2,18.0,'2025-03-24 12:39:05');
INSERT INTO donnees VALUES(224,2,2,20.0,'2025-03-24 12:39:05');
INSERT INTO donnees VALUES(225,3,2,10.0,'2025-03-24 12:39:05');
INSERT INTO donnees VALUES(226,4,2,10.0,'2025-03-24 12:39:05');
INSERT INTO donnees VALUES(228,1,2,18.0,'2025-03-24 12:39:12');
INSERT INTO donnees VALUES(229,2,2,20.0,'2025-03-24 12:39:12');
INSERT INTO donnees VALUES(230,3,2,10.0,'2025-03-24 12:39:12');
INSERT INTO donnees VALUES(231,4,2,10.0,'2025-03-24 12:39:12');
INSERT INTO donnees VALUES(232,1,2,18.0,'2025-03-24 12:39:22');
INSERT INTO donnees VALUES(233,2,2,20.0,'2025-03-24 12:39:22');
INSERT INTO donnees VALUES(234,3,2,10.0,'2025-03-24 12:39:22');
INSERT INTO donnees VALUES(235,4,2,10.0,'2025-03-24 12:39:22');
INSERT INTO donnees VALUES(236,1,1,18.0,'2025-03-24 12:39:27');
INSERT INTO donnees VALUES(237,2,1,20.0,'2025-03-24 12:39:27');
INSERT INTO donnees VALUES(238,3,1,10.0,'2025-03-24 12:39:27');
INSERT INTO donnees VALUES(239,4,1,10.0,'2025-03-24 12:39:27');
INSERT INTO donnees VALUES(240,1,2,18.0,'2025-03-24 12:39:33');
INSERT INTO donnees VALUES(241,2,2,20.0,'2025-03-24 12:39:33');
INSERT INTO donnees VALUES(242,3,2,10.0,'2025-03-24 12:39:33');
INSERT INTO donnees VALUES(243,4,2,10.0,'2025-03-24 12:39:33');
INSERT INTO donnees VALUES(244,1,2,18.0,'2025-03-24 12:39:39');
INSERT INTO donnees VALUES(245,2,2,20.0,'2025-03-24 12:39:39');
INSERT INTO donnees VALUES(246,3,2,10.0,'2025-03-24 12:39:39');
INSERT INTO donnees VALUES(247,4,2,10.0,'2025-03-24 12:39:39');
INSERT INTO donnees VALUES(248,1,2,18.0,'2025-03-24 12:39:44');
INSERT INTO donnees VALUES(249,2,2,20.0,'2025-03-24 12:39:44');
INSERT INTO donnees VALUES(250,3,2,10.0,'2025-03-24 12:39:44');
INSERT INTO donnees VALUES(251,4,2,10.0,'2025-03-24 12:39:44');
INSERT INTO donnees VALUES(252,1,2,18.0,'2025-03-24 12:39:49');
INSERT INTO donnees VALUES(253,2,2,20.0,'2025-03-24 12:39:49');
INSERT INTO donnees VALUES(254,3,2,10.0,'2025-03-24 12:39:49');
INSERT INTO donnees VALUES(255,4,2,10.0,'2025-03-24 12:39:49');
INSERT INTO donnees VALUES(256,1,2,18.0,'2025-03-24 12:39:55');
INSERT INTO donnees VALUES(257,2,2,20.0,'2025-03-24 12:39:55');
INSERT INTO donnees VALUES(258,3,2,10.0,'2025-03-24 12:39:55');
INSERT INTO donnees VALUES(259,4,2,10.0,'2025-03-24 12:39:55');
INSERT INTO donnees VALUES(260,1,2,18.0,'2025-03-24 12:40:00');
INSERT INTO donnees VALUES(261,2,2,20.0,'2025-03-24 12:40:00');
INSERT INTO donnees VALUES(262,3,2,10.0,'2025-03-24 12:40:00');
INSERT INTO donnees VALUES(263,4,2,10.0,'2025-03-24 12:40:00');
INSERT INTO donnees VALUES(264,1,1,18.0,'2025-03-24 12:40:03');
INSERT INTO donnees VALUES(265,2,1,20.0,'2025-03-24 12:40:03');
INSERT INTO donnees VALUES(266,3,1,10.0,'2025-03-24 12:40:03');
INSERT INTO donnees VALUES(267,4,1,10.0,'2025-03-24 12:40:03');
INSERT INTO donnees VALUES(268,1,2,18.0,'2025-03-24 12:40:06');
INSERT INTO donnees VALUES(269,2,2,20.0,'2025-03-24 12:40:06');
INSERT INTO donnees VALUES(270,3,2,10.0,'2025-03-24 12:40:06');
INSERT INTO donnees VALUES(271,4,2,10.0,'2025-03-24 12:40:06');
INSERT INTO donnees VALUES(272,1,2,18.0,'2025-03-24 12:40:11');
INSERT INTO donnees VALUES(273,2,2,20.0,'2025-03-24 12:40:11');
INSERT INTO donnees VALUES(274,3,2,10.0,'2025-03-24 12:40:11');
INSERT INTO donnees VALUES(275,4,2,10.0,'2025-03-24 12:40:11');
INSERT INTO donnees VALUES(276,1,2,18.0,'2025-03-24 12:40:38');
INSERT INTO donnees VALUES(277,2,2,20.0,'2025-03-24 12:40:38');
INSERT INTO donnees VALUES(278,3,2,10.0,'2025-03-24 12:40:38');
INSERT INTO donnees VALUES(279,4,2,10.0,'2025-03-24 12:40:38');
INSERT INTO donnees VALUES(280,1,1,18.0,'2025-03-24 12:40:39');
INSERT INTO donnees VALUES(281,2,1,20.0,'2025-03-24 12:40:39');
INSERT INTO donnees VALUES(282,3,1,10.0,'2025-03-24 12:40:39');
INSERT INTO donnees VALUES(283,4,1,10.0,'2025-03-24 12:40:39');
INSERT INTO donnees VALUES(284,1,2,18.0,'2025-03-24 12:41:15');
INSERT INTO donnees VALUES(285,2,2,20.0,'2025-03-24 12:41:15');
INSERT INTO donnees VALUES(286,3,2,10.0,'2025-03-24 12:41:15');
INSERT INTO donnees VALUES(287,4,2,10.0,'2025-03-24 12:41:15');
INSERT INTO donnees VALUES(288,1,1,18.0,'2025-03-24 12:41:15');
INSERT INTO donnees VALUES(289,2,1,20.0,'2025-03-24 12:41:15');
INSERT INTO donnees VALUES(290,3,1,10.0,'2025-03-24 12:41:15');
INSERT INTO donnees VALUES(291,4,1,10.0,'2025-03-24 12:41:15');
INSERT INTO donnees VALUES(292,1,1,18.0,'2025-03-24 12:41:51');
INSERT INTO donnees VALUES(293,2,1,20.0,'2025-03-24 12:41:51');
INSERT INTO donnees VALUES(294,3,1,10.0,'2025-03-24 12:41:51');
INSERT INTO donnees VALUES(295,4,1,10.0,'2025-03-24 12:41:51');
INSERT INTO donnees VALUES(296,1,1,18.0,'2025-03-24 12:42:28');
INSERT INTO donnees VALUES(297,2,1,20.0,'2025-03-24 12:42:28');
INSERT INTO donnees VALUES(298,3,1,10.0,'2025-03-24 12:42:28');
INSERT INTO donnees VALUES(299,4,1,10.0,'2025-03-24 12:42:28');
INSERT INTO donnees VALUES(300,1,1,18.0,'2025-03-24 12:43:04');
INSERT INTO donnees VALUES(301,2,1,20.0,'2025-03-24 12:43:04');
INSERT INTO donnees VALUES(302,3,1,10.0,'2025-03-24 12:43:04');
INSERT INTO donnees VALUES(303,4,1,10.0,'2025-03-24 12:43:04');
INSERT INTO donnees VALUES(304,1,1,18.0,'2025-03-24 12:44:16');
INSERT INTO donnees VALUES(305,2,1,20.0,'2025-03-24 12:44:16');
INSERT INTO donnees VALUES(306,3,1,10.0,'2025-03-24 12:44:16');
INSERT INTO donnees VALUES(307,4,1,10.0,'2025-03-24 12:44:16');
CREATE TABLE IF NOT EXISTS "images" (
  "id_image" INTEGER NOT NULL ,
  "chemin_fichier" text DEFAULT NULL,
  "date_capture" TEXT DEFAULT NULL,
  PRIMARY KEY ("id_image")
);
CREATE TABLE IF NOT EXISTS "compte"(
  "id_compte" INTEGER PRIMARY KEY NOT NULL ,
  "identifiant" varchar(50) NOT NULL ,
  "password"varchar(200)NOT NULL,
  "grade" int DEFAULT 1 NOT NULL
);
INSERT INTO compte VALUES(1,'root','root',2);
INSERT INTO compte VALUES(2,'Saroot','root',3);
INSERT INTO compte VALUES(3,'admin','$2y$10$MdzmFySL0Yi4Exj/InL5LeabaZqA.1ETNIUiXNTF8QHRMALifJQIi',1);
COMMIT;

