---
config:
  theme: forest
  layout: dagre
  look: neo
---
classDiagram
    class capteurs {
        +INTEGER id_capteur PK
        +varchar(50) type
        +varchar(50) localisation
        +text description
        +varchar(20) mesure
    }
    class ruche {
        +INTEGER id_ruche PK
        +varchar(50) name
        +varchar(200) adress
        +REAL batterie
        +REAL seuil_miel
    }
    class donnees {
        +INTEGER id_donnee PK
        +INTEGER id_capteur FK
        +INTEGER id_ruche FK
        +float valeur
        +TEXT date_mesure
    }
    class images {
        +INTEGER id_image PK
        +INTEGER id_ruche FK
        +text chemin_fichier
        +TEXT date_capture
    }
    class compte {
        +INTEGER id_compte PK
        +varchar(50) identifiant
        +varchar(200) password
        +int grade
    }
    class alertes {
        +INTEGER id PK
        +INTEGER id_capteur FK
        +VARCHAR(100) nom
        +VARCHAR(500) phrase
        +INTEGER valeur
        +BOOLEAN statut
        +integer type
        +bool sens
    }
    ruche "1" -- "0..*" donnees : possède
    capteurs "1" -- "0..*" donnees : mesure
    ruche "1" -- "0..*" images : possède
    capteurs "1" -- "0..*" alertes : surveille
